--- a/style/review.css
+++ b/style/review.css
@@ -4,8 +4,10 @@ body {
 
 .form-box {
     max-width: 500px;
-    margin: auto;
-    margin-top: 130px ;
+    /*margin: auto;*/
+    margin-top: 50px ;
+    margin-left: 280px ;
+    margin-bottom: 80px;
     padding: 50px;
     background: #ffffff;
     border: 10px solid #f2f2f2;
@@ -19,13 +21,12 @@ input, textarea {
     width: 100%;
 }
 .cont{
-    margin-top: 30px;
     margin-left: 160px;
 
 }
 .icons{
-    margin-top: 80px;
-    /*margin-left: 45%;*/
+    /*margin-top: 80px;*/
+    margin-left: 50%;
     display: inline-flex;
 }
 .ro{
@@ -36,7 +37,8 @@ input, textarea {
     color: white;
     font-size: 1.9em;
 }
-
 footer{
-    margin: 0;
+    /*margin-top: 150px;*/
+    background-color: #3a3f48;
+    height: 90px;
 }
