--- a/style/classes.css
+++ b/style/classes.css
@@ -46,5 +46,11 @@ footer{
     height: 90px;
 
 }
+@media screen and (max-width : 1025px) {
+    .img-fluid{
+        margin-top: -80000000000000000000px;
+    }
+
+}
 
 
